--- a/package.json
+++ b/package.json
@@ -5,12 +5,25 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint src/**/*.{js,ts,vue,json}",
+    "lint:fix": "eslint --fix 'src/**/*.{js,ts,vue,json}'",
+    "format": "prettier --write 'src/**/*.{js,ts,vue,css,scss,md,json}' --config .prettierrc"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.9.0",
     "nuxt": "^3.2.2",
-    "sass": "^1.58.3"
+    "prettier": "^2.8.4",
+    "sass": "^1.58.3",
+    "typescript": "^4.9.5",
+    "vue-eslint-parser": "^9.1.0"
   },
   "dependencies": {
     "nuxt-icons": "^3.1.0",
