--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "postinstall": "nuxt prepare",
     "lint": "eslint src/**/*.{js,ts,vue,json}",
     "lint:fix": "eslint --fix 'src/**/*.{js,ts,vue,json}'",
-    "format": "prettier --write 'src/**/*.{js,ts,vue,css,scss,md,json}' --config .prettierrc"
+    "stylelint": "stylelint 'src/**/*.{css,sass,scss,vue}'",
+    "stylelint:fix": "stylelint --fix 'src/**/*.{css,sass,scss,vue}'",
+    "format": "prettier -w 'src/**/*.{js,ts,vue,css,sass,scss,md,json}' --config ./.prettierrc"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
@@ -20,9 +22,19 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.9.0",
     "nuxt": "^3.2.2",
+    "nuxt-purgecss": "^2.0.0",
+    "postcss": "^8.4.21",
+    "postcss-html": "^1.5.0",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
+    "stylelint": "^15.2.0",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recommended": "^10.0.1",
+    "stylelint-config-recommended-vue": "^1.4.0",
+    "stylelint-config-standard-scss": "^7.0.1",
     "typescript": "^4.9.5",
+    "vite": "^4.1.2",
+    "vite-plugin-stylelint": "^4.2.0",
     "vue-eslint-parser": "^9.1.0"
   },
   "dependencies": {
